# autoware.universe

./: build_depends.repos
.github/workflows/: build-and-test-differential.yaml  build-test-tidy-pr.yaml  bump-version-pr.yaml  clang-tidy-differential.yaml
common/autoware_boundary_departure_checker/: package.xml
control/autoware_collision_detector/: package.xml
control/autoware_control_validator/: package.xml
control/autoware_lane_departure_checker/: CMakeLists.txt  package.xml
control/autoware_operation_mode_transition_manager/: CMakeLists.txt
control/autoware_vehicle_cmd_gate/: README.md
evaluator/autoware_control_evaluator/: package.xml
latest/: 404.html  index.html  sitemap.xml
latest/CODE_OF_CONDUCT/: index.html
latest/CONTRIBUTING/: index.html
latest/DISCLAIMER/: index.html
latest/common/: index.html
latest/planning/: index.html
main/: 404.html  index.html  sitemap.xml
main/CODE_OF_CONDUCT/: index.html
main/CONTRIBUTING/: index.html
main/DISCLAIMER/: index.html
main/common/: index.html
main/planning/: index.html
main/search/: search_index.json
planning/autoware_departure_checker/: CMakeLists.txt  package.xml
planning/autoware_departure_checker/include/autoware/departure_checker/: departure_checker.hpp  parameters.hpp  utils.hpp
planning/autoware_departure_checker/src/: departure_checker.cpp  utils.cpp
planning/autoware_departure_checker/test/: test_calc_max_search_length_for_boundaries.cpp  test_calc_trajectory_deviation.cpp  test_create_vehicle_footprints.cpp  test_create_vehicle_passing_areas.cpp  test_cut_trajectory.cpp  test_resample_trajectory.cpp
planning/autoware_planning_validator/: README.md
planning/autoware_rear_obstacle_checker/: CMakeLists.txt  README.md  package.xml
planning/behavior_velocity_planner/autoware_behavior_velocity_detection_lane_module/: CMakeLists.txt  package.xml  plugins.xml
planning/behavior_velocity_planner/autoware_behavior_velocity_detection_lane_module/config/: detection_lane.param.yaml
planning/behavior_velocity_planner/autoware_behavior_velocity_detection_lane_module/param/: detection_lane_parameters.yaml
planning/behavior_velocity_planner/autoware_behavior_velocity_detection_lane_module/src/: manager.cpp  manager.hpp  scene.cpp  scene.hpp  structs.hpp  utils.hpp
sensing/autoware_pointcloud_preprocessor/: CMakeLists.txt  package.xml
system/autoware_command_mode_decider/: CMakeLists.txt  package.xml
system/autoware_command_mode_switcher/: CMakeLists.txt  README.md  package.xml  plugins.xml
system/autoware_command_mode_switcher/include/autoware_command_mode_switcher/common/: command_plugin.hpp  command_status.hpp
system/autoware_command_mode_switcher/launch/: switcher.launch.xml
system/autoware_command_mode_switcher/src/: availability_converter.cpp  availability_converter.hpp  command_mode_switcher.cpp  command_mode_switcher.hpp
system/autoware_command_mode_switcher/src/common/: command_container.cpp  command_container.hpp  command_plugin.cpp  command_status.cpp  manual.cpp  manual.hpp  selector_interface.cpp  selector_interface.hpp
system/autoware_command_mode_switcher/src/plugins/: autonomous.cpp  autonomous.hpp  comfortable_stop.cpp  comfortable_stop.hpp  emergency_stop.cpp  emergency_stop.hpp  local.cpp  local.hpp  pull_over.cpp  pull_over.hpp  remote.cpp  remote.hpp  stop.hpp
system/autoware_command_mode_types/: CMakeLists.txt  README.md  package.xml
system/autoware_command_mode_types/include/autoware_command_mode_types/adapters/: command_mode_status.hpp
system/autoware_command_mode_types/include/autoware_command_mode_types/types/: command_mode_status.hpp
system/autoware_command_mode_types/src/adapters/: command_mode_status.cpp
system/autoware_command_mode_types/src/types/: command_mode_status.cpp
system/autoware_sensor_to_control_latency_checker/: CMakeLists.txt  package.xml
system/autoware_sensor_to_control_latency_checker/config/: sensor_to_control_latency_checker.param.yaml
system/autoware_sensor_to_control_latency_checker/include/autoware_sensor_to_control_latency_checker/: sensor_to_control_latency_checker_node.hpp
system/autoware_sensor_to_control_latency_checker/launch/: sensor_to_control_latency_checker.launch.xml
system/autoware_sensor_to_control_latency_checker/src/: sensor_to_control_latency_checker_node.cpp
(+1325 files in other folders)
